fix: ensure content overflow is handled in lab component

--- a/src/app/modules/lab/lab.component.scss
+++ b/src/app/modules/lab/lab.component.scss
@@ -27,6 +27,7 @@
     gap: 1rem;
     width: 100%;
     flex-wrap: wrap;
+    overflow-y: auto;
 
     &-card {
       display: flex;
